--- a/src/app/components/listagem/listagem.component.html
+++ b/src/app/components/listagem/listagem.component.html
@@ -3,27 +3,27 @@
     <app-rota></app-rota>
   </div>
   <app-pessoas
-    (btnDetalhespage)="btnDetalhespage($event, 'pessoas')"
+    (btnDetalhespage)="btnDetalhespage($event, 'peoples')"
     *ngIf="tab === 1"
   ></app-pessoas>
   <app-planetas
-    (btnDetalhespage)="btnDetalhespage($event, 'planetas')"
+    (btnDetalhespage)="btnDetalhespage($event, 'planets')"
     *ngIf="tab === 2"
   ></app-planetas>
   <app-filmes
-    (btnDetalhespage)="btnDetalhespage($event, 'filmes')"
+    (btnDetalhespage)="btnDetalhespage($event, 'films')"
     *ngIf="tab === 3"
   ></app-filmes>
   <app-especies
-    (btnDetalhespage)="btnDetalhespage($event, 'especies')"
+    (btnDetalhespage)="btnDetalhespage($event, 'species')"
     *ngIf="tab === 4"
   ></app-especies>
   <app-veiculos
-    (btnDetalhespage)="btnDetalhespage($event, 'veiculos')"
+    (btnDetalhespage)="btnDetalhespage($event, 'vehicles')"
     *ngIf="tab === 5"
   ></app-veiculos>
   <app-espaconaves
-    (btnDetalhespage)="btnDetalhespage($event, 'espaconaves')"
+    (btnDetalhespage)="btnDetalhespage($event, 'starships')"
     *ngIf="tab === 6"
   ></app-espaconaves>
   <div class="flex justify-center items-center px-10 sm:px-56 py-20">
