--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="w-full">
+<section class="w-full scale-75">
   <div class="relative w-full h-[95vh] flex items-center justify-center">
     <div
       class="w-full flex flex-col gap-4 sm:gap-24 sm:grid sm:grid-rows-2 sm:grid-cols-3 place-items-center"
@@ -11,18 +11,18 @@
       alt=""
     />
     <img
-      class="absolute top-20 sm:top-24 -right-80 sm:right-32 -z-10"
+      class="absolute w-1/3 p-14 top-20 sm:-top-10 -right-80 sm:right-32 -z-10"
       src="../../../assets/space-station-moon-construction 2.svg"
       alt=""
     />
     <img
-      class="absolute none sm:block sm:bottom-32 sm:right-80 w-44 rotate-180 -z-10"
+      class="absolute none sm:block sm:bottom-10 sm:right-80 w-44 rotate-180 -z-10"
       src="../../../assets/starfighter 1.svg"
       alt=""
     />
   </div>
   <img
-    class="absolute -bottom-2 -left-20 sm:left-28 -z-10"
+    class="absolute -bottom-40 -left-20 sm:left-28 -z-10"
     src="../../../assets/planet-ringed 1.svg"
     alt=""
   />
