--- a/src/app/components/lista/lista.component.html
+++ b/src/app/components/lista/lista.component.html
@@ -1,11 +1,15 @@
+<app-search
+  [dataArray]="lista"
+  (resultsSearch)="handleSearchEvent($event)"
+></app-search>
 <div
-*ngIf="loader |async"
+  *ngIf="loader | async"
   class="shadow-boxlist flex justify-center items-center rounded-xl border border-[#777777 ]"
 >
   <ul class="w-full px-4 sm:px-32 py-10">
     <li
       class="cursor-pointer hover:scale-105 border-b border-[#DDDDDD] px-2 py-6 w-full flex justify-between items-center"
-      *ngFor="let item of lista"
+      *ngFor="let item of searchResults.length != 0 ? searchResults : lista"
     >
       <p
         (click)="detalhes(item.name ? item.name : item.title, item.url)"
