--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,4 +3,8 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
+input[type="search"]::-webkit-search-cancel-button {
+  color: black;
+}
