--- a/src/app/components/detalhes/detalhes.component.html
+++ b/src/app/components/detalhes/detalhes.component.html
@@ -17,9 +17,9 @@
       <p class="text-sm">
         Massa: {{ detalhes.mass == "unknown" ? "N/A" : detalhes.mass + "kg" }}
       </p>
-      <p class="text-sm">skin color: {{ detalhes.skin_color }}</p>
-      <p class="text-sm">eye color: {{ detalhes.eye_color }}</p>
-      <p class="text-sm">gender: {{ detalhes.gender }}</p>
+      <p class="text-sm">cor da pele: {{ detalhes.skin_color }}</p>
+      <p class="text-sm">cor dos olhos: {{ detalhes.eye_color }}</p>
+      <p class="text-sm">genero: {{ detalhes.gender }}</p>
     </div>
     <div class="grid grid-cols-2 gap-2" *ngIf="urlDetalhes[0] === 'planets'">
       <p class="text-sm">clima:{{ detalhes.climate }}</p>
@@ -33,12 +33,12 @@
     </div>
     <div class="grid grid-cols-2 gap-2" *ngIf="urlDetalhes[0] === 'films'">
       <div>
-        <p class="text-sm">director: {{ detalhes.director }}</p>
-        <p class="text-sm">episode_id: {{ detalhes.episode_id }}</p>
-        <p class="text-sm">producer: {{ detalhes.producer }}</p>
-        <p class="text-sm">release_date: {{ detalhes.release_date }}</p>
+        <p class="text-sm">diretor: {{ detalhes.director }}</p>
+        <p class="text-sm">ide do episodio: {{ detalhes.episode_id }}</p>
+        <p class="text-sm">produtor: {{ detalhes.producer }}</p>
+        <p class="text-sm">data de lançamento: {{ detalhes.release_date }}</p>
       </div>
-      <p class="text-sm w-96">opening_crawl: {{ detalhes.opening_crawl }}</p>
+      <p class="text-sm w-96">sinapse: {{ detalhes.opening_crawl }}</p>
     </div>
     <div class="grid grid-cols-2 gap-2" *ngIf="urlDetalhes[0] === 'species'">
       <p class="text-sm">
@@ -49,49 +49,51 @@
           >{{ planetaNatal.name }}</span
         >
       </p>
-      <p class="text-sm">average_height: {{ detalhes.average_height }}cm</p>
-      <p class="text-sm">
-        average_lifespan: {{ detalhes.average_lifespan }} anos
-      </p>
-      <p class="text-sm">classification: {{ detalhes.classification }}</p>
-      <p class="text-sm">designation: {{ detalhes.designation }}</p>
-      <p class="text-sm">eye_colors: {{ detalhes.eye_colors }}</p>
-      <p class="text-sm">hair_colors: {{ detalhes.hair_colors }}</p>
-      <p class="text-sm">language: {{ detalhes.language }}</p>
-      <p class="text-sm">skin_colors: {{ detalhes.skin_colors }}</p>
+      <p class="text-sm">altura média: {{ detalhes.average_height }}cm</p>
+      <p class="text-sm">media de vida: {{ detalhes.average_lifespan }} anos</p>
+      <p class="text-sm">classificação: {{ detalhes.classification }}</p>
+      <p class="text-sm">designação: {{ detalhes.designation }}</p>
+      <p class="text-sm">cor dos olhos: {{ detalhes.eye_colors }}</p>
+      <p class="text-sm">cor do cabelo: {{ detalhes.hair_colors }}</p>
+      <p class="text-sm">lingua: {{ detalhes.language }}</p>
+      <p class="text-sm">cor da pele: {{ detalhes.skin_colors }}</p>
     </div>
     <div class="grid grid-cols-2 gap-2" *ngIf="urlDetalhes[0] === 'vehicles'">
       <p class="text-sm">
-        cargo_capacity:
+        capacidade de carga:
         {{ detalhes.cargo_capacity }}
       </p>
-      <p class="text-sm">consumables: {{ detalhes.consumables }}</p>
-      <p class="text-sm">cost_in_credits : {{ detalhes.cost_in_credits }}</p>
-      <p class="text-sm">crew: {{ detalhes.crew }}</p>
-      <p class="text-sm">length: {{ detalhes.length }}</p>
+      <p class="text-sm">consumíveis: {{ detalhes.consumables }}</p>
+      <p class="text-sm">custo : {{ detalhes.cost_in_credits }}</p>
+      <p class="text-sm">equipe: {{ detalhes.crew }}</p>
+      <p class="text-sm">comprimento: {{ detalhes.length }}</p>
       <p class="text-sm">
-        max_atmosphering_speed: {{ detalhes.max_atmosphering_speed }}
+        velocidade maxima: {{ detalhes.max_atmosphering_speed }}
       </p>
-      <p class="text-sm">model: {{ detalhes.model }}</p>
-      <p class="text-sm">passengers: {{ detalhes.passengers }}</p>
-      <p class="text-sm">vehicle_class: {{ detalhes.vehicle_class }}</p>
-      <p class="text-sm">manufacturer: {{ detalhes.manufacturer }}</p>
+      <p class="text-sm">modelo: {{ detalhes.model }}</p>
+      <p class="text-sm">
+        quantidade de passageiros: {{ detalhes.passengers }}
+      </p>
+      <p class="text-sm">classe : {{ detalhes.vehicle_class }}</p>
+      <p class="text-sm">fabricante: {{ detalhes.manufacturer }}</p>
     </div>
     <div class="grid grid-cols-2 gap-2" *ngIf="urlDetalhes[0] === 'starships'">
       <p class="text-sm">MGLT: {{ detalhes.MGLT }}</p>
-      <p class="text-sm">cargo_capacity : {{ detalhes.cargo_capacity }}</p>
-      <p class="text-sm">consumables: {{ detalhes.consumables }}</p>
-      <p class="text-sm">cost_in_credits: {{ detalhes.cost_in_credits }}</p>
-      <p class="text-sm">crew: {{ detalhes.crew }}</p>
-      <p class="text-sm">hyperdrive_rating: {{ detalhes.hyperdrive_rating }}</p>
-      <p class="text-sm">length: {{ detalhes.length }}</p>
+      <p class="text-sm">capacidade de carga : {{ detalhes.cargo_capacity }}</p>
+      <p class="text-sm">consumiveis: {{ detalhes.consumables }}</p>
+      <p class="text-sm">custo: {{ detalhes.cost_in_credits }}</p>
+      <p class="text-sm">equipe: {{ detalhes.crew }}</p>
       <p class="text-sm">
-        max_atmosphering_speed: {{ detalhes.max_atmosphering_speed }}
+        classificação de hyperdrive: {{ detalhes.hyperdrive_rating }}
       </p>
-      <p class="text-sm">model: {{ detalhes.model }}</p>
-      <p class="text-sm">passengers: {{ detalhes.passengers }}</p>
-      <p class="text-sm">starship_class: {{ detalhes.starship_class }}</p>
-      <p class="text-sm">manufacturer: {{ detalhes.manufacturer }}</p>
+      <p class="text-sm">comprimento: {{ detalhes.length }}</p>
+      <p class="text-sm">
+        velocidade maxima: {{ detalhes.max_atmosphering_speed }}
+      </p>
+      <p class="text-sm">modelo: {{ detalhes.model }}</p>
+      <p class="text-sm">quantdade de passageiros: {{ detalhes.passengers }}</p>
+      <p class="text-sm">classe: {{ detalhes.starship_class }}</p>
+      <p class="text-sm">fabricante: {{ detalhes.manufacturer }}</p>
     </div>
   </div>
   <div class="px-2 z-50">
